--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="forgot_pwd_button_text">Reset Password</string>
     <string name="error_invalid_password">Password length must be 4</string>
     <string name="resend_otp_text">Resend OTP</string>
+    <string name="set_pin">Set Pin</string>
 </resources>
