--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,11 @@
     <string name="forgot_pwd_button_text">Reset Password</string>
     <string name="error_invalid_password">Password length must be 4</string>
     <string name="resend_otp_text">Resend OTP</string>
-    <string name="set_pin">Set Pin</string>
+    <string name="set_pin">SUBMIT</string>
+    <string name="otp_enter_text">Please enter your pin</string>
+    <string name="otp_set_pin_text">Please generate your four digit pin</string>
+    <string name="otp_set_confirm_pin_text">Re- enter your pin</string>
+    <string name="email_title">Email Address</string>
+    <string name="mobile_title">Mobile No</string>
+    <string name="user_status_update_text">Write something to share...</string>
 </resources>
