--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,17 @@
     <string name="social_connect_status">I am using social connect app...</string>
     <string name="is_friend_title">Friends</string>
     <string name="add_friend_title">Add Friends</string>
+
+    <!--    ToolBar labels    -->
+    <string name="feed_fragment">HOME</string>
+    <string name="notice_fragment">NOTICES</string>
+    <string name="update_fragment">UPDATES</string>
+    <string name="chat_fragment">CHATS</string>
+    <string name="friends_fragment">FRIENDS</string>
+    <string name="proflile_activity">PROFILE</string>
+    <string name="post_upload_activity">Post Upload</string>
+    <string name="friend_profile_activity">User profile</string>
+    <string name="network_error">No internet connection</string>
+
+
 </resources>
