--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="resend_otp_text">Resend OTP</string>
     <string name="set_pin">SUBMIT</string>
     <string name="otp_enter_text">Please enter your pin</string>
+    <string name="enter_your_otp">Enter your OTP number</string>
     <string name="otp_set_pin_text">Please generate your four digit pin</string>
     <string name="otp_set_confirm_pin_text">Re- enter your pin</string>
     <string name="email_title">Email Address</string>
